added gulp and gulp sass to project. got it working correctly

--- a/web-checklist/src/App.css
+++ b/web-checklist/src/App.css
@@ -1,66 +1,1 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-/* Sign in */
-.login-form {
-  background-color: #60D7F8;
-  padding: 1em 0;
-  text-align: right;
-}
-.sign-in-btn {
-  display: inline-block;
-  background-color: #878787;
-  color: #fff;  
-  margin: 0;
-  text-align: right;
-  margin-right: 5%;
-  padding: 0.5em;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.sign-out {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-.sign-out-btn {
-  margin-right: 5%;
-  color: #fff;
-  margin-left: 15px;
-  cursor: pointer;
-}
-
-.sign-out img {
-  width: 50px;
-  height: 50px;
-  border-radius: 100px;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
+.App-logo{-webkit-animation:App-logo-spin infinite 20s linear;animation:App-logo-spin infinite 20s linear;height:80px}.App-header{background-color:#222;height:150px;padding:20px;color:white;text-align:center}.App-title{font-size:1.5em}.App-intro{font-size:large}.login-form{background-color:#60D7F8;padding:1em 0;text-align:right}.sign-in-btn{display:inline-block;background-color:#878787;color:#fff;margin:0;text-align:right;margin-right:5%;padding:0.5em;border-radius:5px;cursor:pointer}.sign-out{display:-webkit-box;display:-ms-flexbox;display:flex;-ms-flex-wrap:wrap;flex-wrap:wrap;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:end;-ms-flex-pack:end;justify-content:flex-end}.sign-out-btn{margin-right:5%;color:#fff;margin-left:15px;cursor:pointer}.sign-out img{width:50px;height:50px;border-radius:100px}.homepg-content-container{margin-top:2%}.create-btn{background-color:#60D7F8;color:#fff;border:2px solid #60D7F8}@-webkit-keyframes App-logo-spin{from{-webkit-transform:rotate(0deg);transform:rotate(0deg)}to{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}@keyframes App-logo-spin{from{-webkit-transform:rotate(0deg);transform:rotate(0deg)}to{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}
