lots of changes... writes to db with updated fields, shows correct fields based on what cl is being viewed, tied to user id, still need to work on styling

--- a/web-checklist/src/App.scss
+++ b/web-checklist/src/App.scss
@@ -48,6 +48,11 @@ a {
   font-size: large;
 }
 
+.not-loggedin {
+  margin-top: 1em;
+  text-align: center;
+}
+
 /* Sign in */
 
 .nav {
@@ -138,11 +143,6 @@ a {
   margin-top: 2%;
 }
 
-.not-loggedin-homepg {
-  margin-top: 1em;
-  text-align: center;
-}
-
 .create-checklists {
   h2 {
     margin: 0;
@@ -220,6 +220,14 @@ a {
 
 .hide {
   display: none;
+}
+
+/* Single view of each checklist */
+.single-checklist-page-container {
+
+  .single-checklist-name{
+
+  }
 }
 
 /* animation */
