--- a/web-checklist/src/App.scss
+++ b/web-checklist/src/App.scss
@@ -5,7 +5,7 @@ Variables
 $white: #fff;
 $black: #000;
 $gray: #878787;
-$dark : #222222;
+$dark: #222222;
 $reactBlue: #60D7F8;
 $rale: 'Raleway',
 sans-serif;
@@ -80,7 +80,8 @@ a {
     li {
       a {
         padding: 0 0.5em;
-        color: $black;
+        color: $white;
+        text-shadow: 1px 1px 1px $black;
         font-weight: bold;
         font-size: 1.1em;
       }
@@ -146,14 +147,16 @@ a {
 
 /* checklists section */
 
-.homepg-content-container {
-  margin-top: 2%;
+.homepg-section {
+  margin: 2% 0;
+  min-height: 50vh;
 }
 
 .create-checklists {
   h2 {
     margin: 0;
     padding: 0 0 1em 0;
+    text-transform: capitalize;
   }
 }
 
@@ -172,6 +175,7 @@ a {
 }
 
 /* checklist creation form */
+
 .creation-title {
   padding: 0.5em;
   margin: 0;
@@ -207,7 +211,6 @@ a {
   background-color: $reactBlue;
   border-radius: 10px;
   transition: all 0.3s ease-in-out;
-
   &:hover {
     background: transparent;
     color: $reactBlue;
@@ -230,8 +233,8 @@ a {
 }
 
 /* Single view of each checklist */
-.single-checklist-page-container {
 
+.single-checklist-page-container {
   .inner-single-page {
     text-align: center;
     h2 {
@@ -240,10 +243,10 @@ a {
       padding-bottom: 0.3em;
     }
   }
-
-  .single-checklist-name, .single-checklist-type {
+  .single-checklist-name,
+  .single-checklist-type {
     display: inline-block;
-    width: 22%;
+    width: 80%;
     margin: 1%;
     padding: 0.5em 1em;
     text-align: center;
@@ -251,7 +254,6 @@ a {
     color: $reactBlue;
     border-radius: 15px;
   }
-
   .checkbox-container {
     border-bottom: 2px solid $dark;
     position: relative;
@@ -296,7 +298,9 @@ a {
     color: $reactBlue;
   }
 }
-.add-field-btn, .add-field-btn:focus {
+
+.add-field-btn,
+.add-field-btn:focus {
   display: inline-block;
   background: $reactBlue;
   color: $white;
@@ -307,7 +311,6 @@ a {
   padding: 0.5em;
   margin: 1em;
   transition: all 0.3s ease-in-out;
-
   &:hover {
     background: transparent;
     color: $reactBlue;
@@ -320,6 +323,39 @@ a {
   }
 }
 
+/* Footer Section */
+
+.footer {
+  margin-top: 2%;
+  padding: 0.5em 0;
+  background-color: $reactBlue;
+  color: $white;
+  .social-media {
+    a {
+      color: $dark;
+      font-size: 1.5em;
+      margin: 0 0.45em;
+      transition: all 0.3s ease-in-out;
+      &:hover {
+        color: $white;
+      }
+    }
+  }
+}
+
+.after-footer {
+  background-color: $dark;
+  padding: 1em 0;
+  text-align: right;
+  p {
+    color: $white;
+    margin: 0;
+    padding-right: 20px;
+    a {
+      color: $reactBlue;
+    }
+  }
+}
 
 /* animation */
 
@@ -334,4 +370,11 @@ a {
 
 /* responsive section */
 
-@media (min-width: 768px) {}
+@media screen and (min-width: 768px) {
+  .single-checklist-page-container {
+    .single-checklist-name,
+    .single-checklist-type {
+      width: 22%;
+    }
+  }
+}
