--- a/web-checklist/src/App.scss
+++ b/web-checklist/src/App.scss
@@ -34,8 +34,9 @@ a {
 
 .App-header {
   background-color: #222;
-  height: 150px;
+  min-height: 150px;
   padding: 20px;
+  margin-top: 30px;
   color: $white;
   text-align: center;
 }
@@ -61,6 +62,7 @@ a {
 }
 
 /* Nav section */
+
 .nav-left {
   position: fixed;
   top: 0;
@@ -69,15 +71,12 @@ a {
   left: 0;
   padding: 10px 0;
   z-index: 9;
-
   li {
     display: none;
   }
-
   li.showMobileNav {
     display: block;
   }
-
   #mobile-only {
     display: inline-block;
   }
@@ -393,10 +392,10 @@ a {
 }
 
 /* Remove list section */
+
 .remove-list-item {
   position: relative;
   border-bottom: 2px solid $dark;
-
   a {
     margin: 0;
     padding: 1em 0;
@@ -404,7 +403,6 @@ a {
     text-decoration: none;
     display: inline-block;
   }
-
   button {
     position: absolute;
     right: 10px;
@@ -433,31 +431,28 @@ a {
 /* responsive section */
 
 @media screen and (min-width: 768px) {
-
+  .App-header {
+    margin-top: 0;
+  }
   .nav-left {
     position: static;
     background-color: transparent;
-
     #mobile-only {
       display: none;
     }
-
     li {
       display: inline-block;
     }
   }
-
   .create-checklists {
     h2 {
       text-align: left;
     }
   }
-
   .create-btn {
     display: inline-block;
     width: auto;
   }
-
   .single-checklist-page-container {
     .single-checklist-name,
     .single-checklist-type {
