--- a/web-checklist/src/App.scss
+++ b/web-checklist/src/App.scss
@@ -369,14 +369,47 @@ a {
 
 /* single checklist notes section */
 
+.checklist-notes-section {
+  max-height: 1500px;
+  overflow-y: auto;
+}
+
 .form-group {
   margin-top: 1em;
 }
 
-.checklist-note-single {
+.active-note {
+  .checklist-single-note-content {
+    display: none;
+  }
+  .edit-group {
+    display: flex;
+    margin: 1em 0;
+  }
+}
+
+.edit-group {
+  display: none;
+  align-items: stretch;
+  justify-content: flex-start;
   padding: 0.5em;
+  margin-top: 1em;
+  input {
+    width: 70%;
+  }
+  .add-field-btn {
+    margin: 0;
+    margin-left: 5px;
+  }
+}
+
+.checklist-note-single {
   margin: 0.5em 0;
   border: 2px solid $reactBlue;
+}
+
+.checklist-single-note-content {
+  padding: 1em 0.5em 0.5em 0.5em;
 }
 
 .checklist-single-note-stamp {
@@ -385,6 +418,9 @@ a {
   align-items: center;
   justify-content: space-between;
   margin-top: 1em;
+  padding: 0.5em;
+  border-top: 2px solid $black;
+  background-color: rgba(80,80,80, 0.2);
 }
 
 .time-stamp {
