--- a/web-checklist/src/App.scss
+++ b/web-checklist/src/App.scss
@@ -6,9 +6,8 @@ $white: #fff;
 $black: #000;
 $gray: #878787;
 $dark: #222222;
-$reactBlue: #60D7F8;
-$rale: 'Raleway',
-sans-serif;
+$reactBlue: #60d7f8;
+$rale: "Raleway", sans-serif;
 /********************
 Styles Section
 ********************/
@@ -267,6 +266,25 @@ a {
   }
   ul {
     text-align: left;
+    list-style-type: none;
+    padding-left: 0;
+    .open-list-item {
+      margin: 10px 0;
+      border-bottom: 2px solid $black;
+      a {
+        color: $black;
+        padding: 10px 15px;
+        display: block;
+        transition: all 0.3s ease-in-out;
+        &:hover {
+          background-color: $black;
+          color: $reactBlue;
+        }
+      }
+      &:last-child {
+        border-bottom: none;
+      }
+    }
   }
 }
 
