adjusted styles for the note edit box

--- a/web-checklist/src/App.scss
+++ b/web-checklist/src/App.scss
@@ -397,6 +397,10 @@ a {
   margin-top: 1em;
 }
 
+#edit-comment {
+  max-width: 1010px;
+}
+
 .active-note {
   .checklist-single-note-content {
     display: none;
